# dns-switcher

./: .gitignore  .prettierrc  .vscode-extensions.json  .vscode-settings.json  LICENSE  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
docs/: CONTRIBUTING.md  FAQ.md  TROUBLESHOOTING.md
src/: layout.svelte
src-tauri/: Cargo.toml  dns-switcher.exe.manifest  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: custom_presets.rs  dns.rs  lib.rs  main.rs  mini_window.rs  network.rs  presets.rs  tray.rs  types.rs
src/lib/: api.ts  i18n.ts  presetUI.ts  storage.ts  stores.ts  types.ts
src/lib/components/: CustomTab.svelte  MiniTitleBar.svelte  Notification.svelte  SettingsTab.svelte  TitleBar.svelte  types.ts
src/lib/components/MainTab/: CurrentDnsCard.svelte  DnsDetailsSection.svelte  DnsStatusSection.svelte  MainTab.svelte  QuickPresetCard.svelte  QuickPresetsSection.svelte
src/lib/components/serviceTab/: CustomListsSection.svelte  DetailModal.svelte  FiltersPanel.svelte  ListFormModal.svelte  ServiceCard.svelte  ServicesTab.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/mini/: +layout.svelte  +page.svelte  MiniLayout.svelte  MiniPage.svelte
